--- a/builds-subscription.yaml
+++ b/builds-subscription.yaml
@@ -1,10 +1,14 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
+  labels:
+    operators.coreos.com/openshift-builds-operator.openshift-operators: ''
   name: openshift-builds-operator
   namespace: openshift-operators
 spec:
   channel: latest
+  installPlanApproval: Automatic
   name: openshift-builds-operator
-  source: openshift-builds-operator-index 
-  sourceNamespace: openshift-marketplace 
+  source: redhat-operators
+  sourceNamespace: openshift-marketplace
+  startingCSV: openshift-builds-operator.v1.0.2
