--- a/serverless-subscription.yaml
+++ b/serverless-subscription.yaml
@@ -10,7 +10,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   labels:
-    operators.coreos.com/serverless-operator.openshift-serverless: ''
+    operators.coreos.com/serverless-operator.openshift-serverless: ""
   name: serverless-operator
   namespace: openshift-serverless
 spec:
@@ -19,4 +19,4 @@ spec:
   name: serverless-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: serverless-operator.v1.33.0
+  startingCSV: serverless-operator.v1.33.1
