--- a/knative-serving.yaml
+++ b/knative-serving.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-serving
+---
 kind: KnativeServing
 apiVersion: operator.knative.dev/v1beta1
 metadata:
