--- a/builds-subscription.yaml
+++ b/builds-subscription.yaml
@@ -2,13 +2,13 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   labels:
-    operators.coreos.com/openshift-builds-operator.openshift-operators: ''
+    operators.coreos.com/openshift-builds-operator.openshift-builds: ""
   name: openshift-builds-operator
-  namespace: openshift-operators
+  namespace: openshift-builds
 spec:
-  channel: latest
+  channel: stable-v1
   installPlanApproval: Automatic
   name: openshift-builds-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: openshift-builds-operator.v1.0.2
+  startingCSV: openshift-builds-operator.v1.1.0
