--- a/ols-config.yaml
+++ b/ols-config.yaml
@@ -21,10 +21,10 @@ spec:
           name: openai-api-keys
         url: "https://api.openai.com/v1"
         models:
-          - name: gpt-3.5-turbo
+          - name: gpt-4o-mini
             parameters:
-              maxTokensForResponse: 20
+              maxTokensForResponse: 8000
   ols:
-    defaultModel: gpt-3.5-turbo
+    defaultModel: gpt-4o-mini
     defaultProvider: myOpenai
     logLevel: DEBUG
